cmake_minimum_required(VERSION 2.8)
project(tower-viewer)

find_package(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTKMM3 REQUIRED gtkmm-3.0)
PKG_CHECK_MODULES(POPPLER REQUIRED poppler-cpp)

INCLUDE_DIRECTORIES(${GTKMM3_INCLUDE_DIRS} ${POPPLER_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTKMM3_LIBRARY_DIRS} ${POPPLER_LIBRARY_DIRS})

ADD_DEFINITIONS(${GTKMM3_CFLAGS_OTHER} ${POPPLER_CFLAGS_OTHER})

add_executable(tower-viewer src/main.cpp)

TARGET_LINK_LIBRARIES(tower-viewer ${GTKMM3_LIBRARIES} ${POPPLER_LIBRARIES})
