cmake_minimum_required(VERSION 2.8)

# external modules
find_package(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTKMM3 REQUIRED gtkmm-3.0)
PKG_CHECK_MODULES(POPPLER REQUIRED poppler-cpp)

# GKT3
INCLUDE_DIRECTORIES(${GTKMM3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTKMM3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTKMM3_CFLAGS_OTHER})

# poppler
INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})
LINK_DIRECTORIES(${POPPLER_LIBRARY_DIRS})
ADD_DEFINITIONS(${POPPLER_CFLAGS_OTHER})

add_library(widgets STATIC
        page_drawing_area.cpp
        page_drawing_area.h
        page_window.cpp page_window.h)

TARGET_LINK_LIBRARIES(widgets ${GTKMM3_LIBRARIES} ${POPPLER_LIBRARIES} document)
